[gd_scene load_steps=27 format=2]

[ext_resource path="res://scenes/general/VarsAndDesign.tscn" type="PackedScene" id=1]
[ext_resource path="res://graphics/timetables/1AHWII_finish.png" type="Texture" id=2]
[ext_resource path="res://graphics/TransparentButton.png" type="Texture" id=3]
[ext_resource path="res://src/rooms/Room_TH_CLASS.gd" type="Script" id=4]
[ext_resource path="res://graphics/Klasse finish_low.png" type="Texture" id=5]
[ext_resource path="res://font/GidoleFont/Gidole-Regular.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://graphics/red_back_arrow.png" type="Texture" id=7]
[ext_resource path="res://graphics/YellowBubble.png" type="Texture" id=8]
[ext_resource path="res://graphics/general/Note2.png" type="Texture" id=9]
[ext_resource path="res://font/besley/Besley-Fatface.otf" type="DynamicFontData" id=10]
[ext_resource path="res://graphics/lab/CheckButton.png" type="Texture" id=11]
[ext_resource path="res://graphics/lab/backArrow.png" type="Texture" id=12]
[ext_resource path="res://src/Camera2D.gd" type="Script" id=13]
[ext_resource path="res://control_theme.tres" type="Theme" id=14]
[ext_resource path="res://graphics/timetables/1AHGTI_finish.png" type="Texture" id=15]
[ext_resource path="res://graphics/timetables/1AHWIM_finish.png" type="Texture" id=16]
[ext_resource path="res://graphics/timetables/1AHME_finish.png" type="Texture" id=17]
[ext_resource path="res://graphics/timetables/1AHMBT_finish.png" type="Texture" id=18]
[ext_resource path="res://graphics/timetables/1AFMBM_finish.png" type="Texture" id=19]

[sub_resource type="DynamicFont" id=1]
size = 123
use_filter = true
font_data = ExtResource( 10 )

[sub_resource type="Gradient" id=2]
offsets = PoolRealArray( 0.195, 0.53, 1 )
colors = PoolColorArray( 0.827148, 0.355063, 0.193863, 0.266667, 1, 0.40567, 0.199219, 0.768627, 0.847059, 0.466667, 0.258824, 0.92549 )

[sub_resource type="DynamicFont" id=3]
size = 266
use_filter = true
font_data = ExtResource( 6 )

[sub_resource type="DynamicFontData" id=4]
font_path = "res://font/besley/Besley-Fatface.otf"

[sub_resource type="DynamicFont" id=5]
size = 31
use_filter = true
extra_spacing_space = -7
font_data = SubResource( 4 )

[sub_resource type="Animation" id=6]
length = 3.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("CanvasLayer/Label:custom_constants/shadow_offset_x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = false
tracks/0/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0, 6 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CanvasLayer/Label:custom_constants/shadow_offset_y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = false
tracks/1/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0, 6 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("CanvasLayer/Label:custom_colors/font_color_shadow")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 0.466667, 0, 0.34902 ), Color( 0.952941, 0.768627, 0.337255, 0.741176 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("CanvasLayer/Label:custom_fonts/font:size")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = false
tracks/3/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 256, 275 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("CanvasLayer/Label:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.623529 ) ]
}

[sub_resource type="Animation" id=7]
tracks/0/type = "value"
tracks/0/path = NodePath("CanvasLayer/ColorRect:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CanvasLayer/CPUParticles2D:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("CanvasLayer/Label:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("CanvasLayer/ColorRect:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("CanvasLayer/CPUParticles2D:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("CanvasLayer/Label:modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/6/type = "method"
tracks/6/path = NodePath(".")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 1 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "playAnim"
} ]
}

[node name="RoomCLASS" type="Node2D"]
script = ExtResource( 4 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 3

[node name="BackButton" type="TextureButton" parent="CanvasLayer"]
visible = false
margin_left = 110.0
margin_top = 591.0
margin_right = 210.0
margin_bottom = 671.0
rect_rotation = 180.0
texture_normal = ExtResource( 12 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DialogBox" type="ColorRect" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.729412, 0.729412, 0.729412, 0.745098 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Note2" type="Sprite" parent="CanvasLayer/DialogBox"]
position = Vector2( 543.976, 335 )
scale = Vector2( 0.570324, 0.570325 )
texture = ExtResource( 9 )

[node name="RichTextLabel" type="RichTextLabel" parent="CanvasLayer/DialogBox"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -287.0
margin_top = -177.0
margin_right = 1974.0
margin_bottom = 1134.0
rect_scale = Vector2( 0.26, 0.26 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = SubResource( 1 )
bbcode_enabled = true
meta_underlined = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TouchScreenButton" type="TouchScreenButton" parent="CanvasLayer/DialogBox"]
position = Vector2( 717.083, 407.572 )
scale = Vector2( 0.136728, 0.167365 )
normal = ExtResource( 3 )

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
visible = false
modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.74902 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CPUParticles2D" type="CPUParticles2D" parent="CanvasLayer"]
visible = false
modulate = Color( 1, 1, 1, 0 )
position = Vector2( 512, 300 )
amount = 50
lifetime = 6.0
preprocess = 5.0
speed_scale = 0.4
texture = ExtResource( 8 )
emission_shape = 1
emission_sphere_radius = 128.0
gravity = Vector2( 0, 5 )
orbit_velocity = 0.02
orbit_velocity_random = 0.62
radial_accel = 32.48
tangential_accel = 2.86
angle = 221.5
angle_random = 0.76
scale_amount = 0.05
scale_amount_random = 0.72
color_ramp = SubResource( 2 )

[node name="Label" type="Label" parent="CanvasLayer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
custom_colors/font_color = Color( 1, 0.854902, 0.294118, 1 )
custom_colors/font_color_shadow = Color( 1, 0.466667, 0, 0.34902 )
custom_constants/shadow_offset_x = 2
custom_constants/shadow_offset_y = 2
custom_fonts/font = SubResource( 3 )
text = "7"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackgroundUnfocus" type="ColorRect" parent="CanvasLayer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CanvasLayer2" type="CanvasLayer" parent="."]

[node name="VarsAndDesign" parent="CanvasLayer2" instance=ExtResource( 1 )]

[node name="BackButton" type="Sprite" parent="CanvasLayer2"]
visible = false
position = Vector2( 56, 549 )
scale = Vector2( 0.04, 0.04 )
texture = ExtResource( 7 )

[node name="TouchBackButton" type="TouchScreenButton" parent="CanvasLayer2/BackButton"]
position = Vector2( -626.482, -633.934 )
scale = Vector2( 1.56009, 2.11712 )
normal = ExtResource( 3 )

[node name="Camera2D" type="Camera2D" parent="."]
offset = Vector2( 512, 300 )
current = true
script = ExtResource( 13 )

[node name="Tween" type="Tween" parent="Camera2D"]

[node name="SpecialitiesSelection" type="Sprite" parent="."]
position = Vector2( 512.552, 300 )
scale = Vector2( 1.45819, 1.2024 )
texture = ExtResource( 5 )

[node name="buttonFS" type="TouchScreenButton" parent="SpecialitiesSelection"]
position = Vector2( -336.224, -217.457 )
scale = Vector2( 0.12658, 0.148018 )
normal = ExtResource( 19 )

[node name="TouchScreenButton" type="TouchScreenButton" parent="SpecialitiesSelection/buttonFS"]
position = Vector2( 242.714, 170.765 )
scale = Vector2( 0.164864, 0.101999 )
normal = ExtResource( 3 )

[node name="buttonGT" type="TouchScreenButton" parent="SpecialitiesSelection"]
position = Vector2( -221.823, -217.968 )
scale = Vector2( 0.125154, 0.152057 )
normal = ExtResource( 15 )

[node name="TouchScreenButton" type="TouchScreenButton" parent="SpecialitiesSelection/buttonGT"]
position = Vector2( 251.969, 117.337 )
scale = Vector2( 0.161959, 0.196668 )
normal = ExtResource( 3 )

[node name="buttonMB" type="TouchScreenButton" parent="SpecialitiesSelection"]
position = Vector2( -107.913, -216.722 )
scale = Vector2( 0.124402, 0.147903 )
normal = ExtResource( 18 )

[node name="TouchScreenButton" type="TouchScreenButton" parent="SpecialitiesSelection/buttonMB"]
position = Vector2( 248.816, 116.408 )
scale = Vector2( 0.172472, 0.105771 )
normal = ExtResource( 3 )

[node name="buttonWM" type="TouchScreenButton" parent="SpecialitiesSelection"]
position = Vector2( 228.47, -217.969 )
scale = Vector2( 0.126594, 0.147903 )
normal = ExtResource( 16 )

[node name="TouchScreenButton" type="TouchScreenButton" parent="SpecialitiesSelection/buttonWM"]
position = Vector2( 507.027, 126.029 )
scale = Vector2( 0.168341, 0.0971614 )
normal = ExtResource( 3 )

[node name="buttonWI" type="TouchScreenButton" parent="SpecialitiesSelection"]
position = Vector2( 115.562, -219.215 )
scale = Vector2( 0.126814, 0.152057 )
normal = ExtResource( 2 )

[node name="TouchScreenButton" type="TouchScreenButton" parent="SpecialitiesSelection/buttonWI"]
position = Vector2( 119.973, 468.55 )
scale = Vector2( 0.169155, 0.203171 )
normal = ExtResource( 3 )

[node name="buttonME" type="TouchScreenButton" parent="SpecialitiesSelection"]
position = Vector2( 4.38977, -216.722 )
scale = Vector2( 0.126218, 0.14998 )
normal = ExtResource( 17 )

[node name="TouchScreenButton" type="TouchScreenButton" parent="SpecialitiesSelection/buttonME"]
position = Vector2( 378.925, 353.913 )
scale = Vector2( 0.164241, 0.205671 )
normal = ExtResource( 3 )

[node name="AcceptCode" type="TouchScreenButton" parent="SpecialitiesSelection"]
position = Vector2( -75.8237, -35.8247 )
scale = Vector2( 0.0660714, 0.079718 )
normal = ExtResource( 11 )

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
margin_right = 40.0
margin_bottom = 40.0
color = Color( 1, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Code" type="Node2D" parent="."]

[node name="AIIT" type="LineEdit" parent="Code"]
margin_left = 52.5196
margin_top = 276.538
margin_right = 96.5196
margin_bottom = 321.538
theme = ExtResource( 14 )
custom_fonts/font = SubResource( 5 )
align = 1
max_length = 1
placeholder_text = "A"
placeholder_alpha = 0.385
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TMB" type="LineEdit" parent="Code"]
margin_left = 105.473
margin_top = 276.456
margin_right = 153.473
margin_bottom = 321.456
theme = ExtResource( 14 )
custom_fonts/font = SubResource( 5 )
align = 1
max_length = 1
placeholder_text = "A"
placeholder_alpha = 0.385
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PLP" type="LineEdit" parent="Code"]
margin_left = 158.862
margin_top = 277.4
margin_right = 206.862
margin_bottom = 322.4
theme = ExtResource( 14 )
custom_fonts/font = SubResource( 5 )
align = 1
max_length = 1
placeholder_text = "A"
placeholder_alpha = 0.385
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BET" type="LineEdit" parent="Code"]
margin_left = 211.083
margin_top = 276.651
margin_right = 259.083
margin_bottom = 321.651
theme = ExtResource( 14 )
custom_fonts/font = SubResource( 5 )
align = 1
max_length = 1
placeholder_text = "A"
placeholder_alpha = 0.385
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SWP" type="LineEdit" parent="Code"]
margin_left = 262.041
margin_top = 278.378
margin_right = 310.041
margin_bottom = 323.378
theme = ExtResource( 14 )
custom_fonts/font = SubResource( 5 )
align = 1
max_length = 1
placeholder_text = "A"
placeholder_alpha = 0.385
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FET" type="LineEdit" parent="Code"]
margin_left = 314.543
margin_top = 278.562
margin_right = 362.543
margin_bottom = 323.562
theme = ExtResource( 14 )
custom_fonts/font = SubResource( 5 )
align = 1
max_length = 1
placeholder_text = "A"
placeholder_alpha = 0.385
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/numberAnim = SubResource( 6 )
anims/showUpNumber = SubResource( 7 )

[connection signal="pressed" from="CanvasLayer/BackButton" to="." method="_on_BackButton_pressed"]
[connection signal="pressed" from="CanvasLayer/DialogBox/TouchScreenButton" to="." method="_on_DialogClose_pressed"]
[connection signal="released" from="CanvasLayer2/BackButton/TouchBackButton" to="." method="_on_TouchBackButton_released"]
[connection signal="released" from="SpecialitiesSelection/buttonFS" to="." method="_on_FS_category_released"]
[connection signal="pressed" from="SpecialitiesSelection/buttonFS/TouchScreenButton" to="." method="_on_mbm_subj_pressed"]
[connection signal="released" from="SpecialitiesSelection/buttonGT" to="." method="_on_GT_category_released"]
[connection signal="pressed" from="SpecialitiesSelection/buttonGT/TouchScreenButton" to="." method="_on_gti_subj_pressed"]
[connection signal="released" from="SpecialitiesSelection/buttonMB" to="." method="_on_MB_category_released"]
[connection signal="pressed" from="SpecialitiesSelection/buttonMB/TouchScreenButton" to="." method="_on_mbt_subj_pressed"]
[connection signal="released" from="SpecialitiesSelection/buttonWM" to="." method="_on_WM_category_released"]
[connection signal="pressed" from="SpecialitiesSelection/buttonWM/TouchScreenButton" to="." method="_on_wim_subj_pressed"]
[connection signal="released" from="SpecialitiesSelection/buttonWI" to="." method="_on_WI_category_released"]
[connection signal="pressed" from="SpecialitiesSelection/buttonWI/TouchScreenButton" to="." method="_on_wii_subj_pressed"]
[connection signal="released" from="SpecialitiesSelection/buttonME" to="." method="_on_ME_category_released"]
[connection signal="pressed" from="SpecialitiesSelection/buttonME/TouchScreenButton" to="." method="_on_me_subj_pressed"]
[connection signal="released" from="SpecialitiesSelection/AcceptCode" to="." method="_on_AcceptCode_released"]
